main - Correção SonarLint